# hf-custom-integration

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  README2.md  additional_requirements.txt  clu_export.py  clu_import.py  env_execute.sh  pyproject.toml  requirements.txt  rough.py
.circleci/: config.yml
hf_integration/: .gitignore  clu_apis.py  clu_converters.py  lexv2_apis.py  lexv2_converters.py  main.py  model_clu.py  model_generic.py  model_service.py  test_lexv2.py  test_lexv2_apis.py  test_lexv2_converters.py  test_main.py  tst_main.py  workspace_clu.py  workspace_example.py  workspace_generic.py  workspace_service.py  workspace_template.py
hf_integration/config/: logging.conf
hf_integration/data/: handlemap.json
hf_integration/humanfirst/: hfjson.py
hf_integration/humanfirst/protobuf/: __init__.py
hf_integration/humanfirst/protobuf/external_integration/v1alpha1/: discovery_pb2.py  discovery_pb2.pyi  discovery_pb2_grpc.py  models_pb2.py  models_pb2.pyi  models_pb2_grpc.py  workspace_pb2.py  workspace_pb2.pyi  workspace_pb2_grpc.py
hf_integration/humanfirst/protobuf/external_nlu/v1alpha1/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
hf_integration/humanfirst/protobuf/google/api/: http_pb2.pyi  httpbody_pb2.pyi
hf_integration/humanfirst/protobuf/model/: core_pb2.py  core_pb2.pyi
hf_integration/humanfirst/protobuf/playbook/: entity_pb2.py  entity_pb2.pyi  entity_pb2_grpc.py  span_pb2.py  span_pb2.pyi
hf_integration/humanfirst/protobuf/tags/: tags_pb2.py  tags_pb2.pyi  tags_pb2_grpc.py
hf_integration/models/huggingface/intent_entity/: __init__.py  data.py  model.py  token_classification.py
hf_integration/test_fixtures/: integration_workspace.json  training_args.json  workspace.json
spec/external_integration/v1alpha1/: discovery.proto  models.proto  workspace.proto
(+8 files in other folders)
