[tool.poetry]
name = "CustomCLU"
version = "1.0.0"
description = ""
authors = ["Mohammed Fayaz Ansar Jelani <fayaz@humanfirst.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
bidict = "^0.22.0"
grpcio = "^1.53.0"
azure-ai-language-conversations = "==1.1.0"
pandas = "==2.0.3"
dataclasses = "==0.6"
dataclasses_json = "==0.6.4"
humanfirst = "==1.0.5"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.47.0"
mypy-protobuf = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
